# Mandelbrot

./: CMakeLists.txt  mandelbrot.cpp  matplotlibcpp.h
